--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,8 @@ body{
 }
 .siteLinks{
 max-width:1210px;
-margin:50px auto;
+margin:30px auto;
+padding:30px;
     .heading{
 font-size:18px;
 font-weight: lighter;
